update css to fix white top and bottom on iOS Safari

--- a/packages/academic/app/index.css
+++ b/packages/academic/app/index.css
@@ -23,6 +23,10 @@
 	--font-sans: 'Inter', sans-serif;
 }
 
+:root {
+	background: var(--webpage-background-color);
+}
+
 /* Universal Select Dropdown */
 .app-select-dropdown {
 	width: 100%;
