--- a/packages/landing/app/index.css
+++ b/packages/landing/app/index.css
@@ -5,3 +5,7 @@
 @import "./styles/auth.css";
 
 @source "../../shared/pages";
+
+:root {
+    background: var(--webpage-background-color);
+}
